migrate from eslint to biomejs
switching from eslint to biome adding migration scripts

--- a/app/flags.css
+++ b/app/flags.css
@@ -2,7 +2,7 @@
   display: inline-block;
   width: 28px;
   height: 17px;
-  background-image: url('/flags.png');
+  background-image: url("/flags.png");
   background-repeat: no-repeat;
   background-size: auto;
 }
